--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,4 +1,4 @@
-{% import "bootstrap/wtf.html" as wtf %}
+﻿{% import "bootstrap/wtf.html" as wtf %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -167,7 +167,7 @@
         </div>
         <div class="btn-send">
             <button class="btn btn-success">Submit</button> &nbsp
-            <a href="{{ url_for('course', course_id=post.course.id) }}" class="btn btn-success">Cancel</a>
+            <a href="{{ url_for('course', course_id=post.course.id) }}" class="btn btn-success">Back</a>
         </div>
     </form>
     </div>
