Added class user page

--- a/templates/course.html
+++ b/templates/course.html
@@ -68,6 +68,8 @@
 <br>
 <center><a href={{ url_for('userspage') }} class="btn btn-success">Home</a>
 <a href={{ url_for('post', course_id=course.id) }} class="btn btn-success">Create Post</a>
+<a href={{ url_for('users', course_id=course.id) }} class="btn btn-success">
+  Search Users</a>
 </center>
 </body>
 </html>
