--- a/templates/users.html
+++ b/templates/users.html
@@ -10,6 +10,23 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+  <style>
+
+    .courseusers {
+      margin-top: 10px;
+      margin-left: 10px;
+    }
+    
+    a {
+      color: black;
+      font-size: 20px;
+    }
+
+    .back {
+      margin-left: 30px;
+    }
+  </style>
 </head>
 <body>
 
@@ -22,8 +39,19 @@
   </ul>
 </nav>
 
- {% for user in users %} 
-  <a href={{ url_for('user', user_id = user.id) }}> {{user.username}} </a><br>
-  {% endfor %}
+  <div class="courseusers">
+
+    <h1>{{course.course_name}} Users</h1>
+
+    <ul>
+      {% for user in users %} 
+      <li><a href={{ url_for('user', user_id = user.id) }}> {{user.username}} </a></li>
+      {% endfor %}
+    </ul>
+
+    </div>
+    <div class="back">
+    <a href={{ url_for('course', course_id=course.id) }} class="btn btn-success">
+  Back to Course</a></div>
 </body>
 </html>
