added navi and style

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -23,6 +23,7 @@
     .page-title{
         margin-top: 50px;
         text-align: center;
+        color: #5d6569;
     }
     .post-info{
         text-align: center;
@@ -33,7 +34,7 @@
     }
     .post-time{
         margin-left: 50px;
-    }
+     }
     .post-container{
         width: 70%;
         margin: 0 auto;
@@ -60,7 +61,7 @@
         position: relative;
         margin-bottom: 30px;
         padding: 18px;
-        background-color: rgba(206, 227, 203, 0.46);
+        background-color: rgba(227, 248, 224, 0.46);
         border-right: 6px solid #3da259;
 
       }
@@ -82,6 +83,7 @@
      }
     .create_time{
         float: right;
+        border-radius: 5px; background: #47a352; color: white;
      }
     textarea{
         resize: none;
@@ -152,6 +154,7 @@
     </nav>
 <div class="post-container">
     <h3 class="page-title">{{ post.title }}</h3>
+    <hr>
     <p class="post-info">
     <span class="author"> <a href="{{url_for('usercenter',username = post.user.username, tag='post')}}">{{ post.user.username }}</a></span>
     <span class="post-time">  {{ post.post_time.strftime('%Y-%m-%d %H:%M:%S') }}</span></p>
