--- a/templates/usercenter.html
+++ b/templates/usercenter.html
@@ -10,6 +10,7 @@
  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
  <style>
+
    .user-info{
        margin-top: 50px;
    }
@@ -27,23 +28,23 @@
      margin:0 auto;
    }
   .selection li {
-
-
       display: block;
       float: left;
-      width: 100px;
+      width: auto;
       text-align: center;
+      margin-right: 20px;
       }
   .selection a {
-       width: 100px;
+      width:auto;
       text-align: center;
-       display: block;
-       float: left;
-       text-decoration: none;
-       color: #5c96ff;
+      float: left;
+      text-decoration: none;
+      font-weight:bold;
+      color: #5c96ff;
   }
   .selection a:hover{
-       color: #75ffb5;
+       color: #113bd0;
+
   }
   .list-group-item p {
        margin: 0;
@@ -64,7 +65,7 @@
        transition: background-color .3s;
        border: 1px solid #ddd;
    }
-   ul.pagination li a.active {
+   .pagination li a.active {
        background-color: #38a356;
        color: white;
        border: 1px solid #38a356;
@@ -82,14 +83,18 @@
        <a class="navbar-brand" href="#">CourseHub</a>
            <ul class="navbar-nav ml-auto">
                <li class="nav-item">
+                   <a class="nav-link" href="{{ url_for('userspage') }}"> Home</a>
+               </li>
+               <li class="nav-item">
                    <a class="nav-link" href="{{ url_for('logout') }}">Sign out</a>
                </li>
+
             </ul>
    </nav>
    <div class="user-info">
-   <p >Username: {{ user.username }}
-   <br>Email: {{ user.email }}
-   </p>
+   <p><span style="border-bottom: dashed 1px #5c96ff; width: auto;">Username: {{ user.username }}</span></p>
+   <p><span style="border-bottom: dashed 1px #5c96ff; width: auto;">Email: {{ user.email }}</span></p>
+
    </div>
 <div class="header">
     <ul class="selection">
@@ -98,13 +103,10 @@
         <li><a href=" {{ url_for('usercenter',username=user.username,tag='comment')}}">
            Comments ({{ user.comment.count() }})</a> </li>
 
-	<br>
-	<br>
 
 </ul>
 </div>
-<center><a href="{{ url_for('userspage') }}">
-	Home</center>
+
 <br> <hr>
 {% block user %}{% endblock %}
 </body>
