spacing to home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,11 +53,59 @@
         border-width: 3px;
 	border-color: green;	
 }
+  .info2{
+	width: 670px;
+	height: 250px;
+	font-family: "Arial Black", sans-serif;
+	background: #641456;
+	color: #000000;
+	top: 40%;
+	left: 50%;
+	position: relative;
+	transform: translate(-50%, -50%);
+	box-sizing: border-box;
+        padding: 11px;  
+	border-style: dashed;
+        border-width: 3px;
+	border-color: white;	
+}
+  .info3{
+	width: 270px;
+	height: 150px;
+	font-family: "Arial";
+	background: #611356;
+	color: #000000;
+	top: 40%;
+	left: 50%;
+	position: relative;
+	transform: translate(-50%, -50%);
+	box-sizing: border-box;
+        padding: 11px;  
+	border-style: dashed;
+        border-width: 5px;
+	border-color: white;	
+}
   .avatar{
 	width: 90px;
-	height: 88px;
+	height: 85px;
 	border-radius: 50%;
 	position: absolute;
+	top: -50px;
+	left: calc(50% - 50px);
+	}
+  .avatar2{
+	width: 70px;
+	height: 85px;
+	border-radius: 50%;
+	position: absolute;
+	top: -50px;
+	left: calc(50% - 50px);
+	}
+  .avatar3{
+	width: 60px;
+	height: 85px;
+	border-radius: 50%;
+	position: relative;
 	top: -50px;
 	left: calc(50% - 50px);
 	}
@@ -138,9 +186,22 @@
 
 
 <br>
-<center><img src="/static/chlogo.png" style="width:350px;height:175px;"></center>
-<br><br><br>
 
+<br>
+
+<br>
+
+<br>
+
+<center><img src="/static/chlogo.png" style="width:350px;height:175px;"></center>
+
+<br>
+
+<br>
+
+<br>
+
+<br>
 
 <div class="row">
   <div class="col-sm">
