--- a/templates/coursesearch.html
+++ b/templates/coursesearch.html
@@ -54,7 +54,18 @@ Dashboard
             				{% endfor %}
         				</ul>
                 <input type="submit" value="Add Course"></input>
-   					</form>
+   					</form> <br>
+
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      {% for message in messages%}
+        <div class = "alert alert-warning alert-dismissible" role-"alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          {{message}}
+        </div>
+      {% endfor %}
+    {% endif %}
+  {% endwith %}
 		</div>
 		</div>
 	</body>
