--- a/templates/removecourse.html
+++ b/templates/removecourse.html
@@ -55,6 +55,17 @@ Dashboard
         				</ul>
                 <input type="submit" value="Remove Course"></input>
    					</form>
+
+             {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      {% for message in messages%}
+        <div class = "alert alert-warning alert-dismissible" role-"alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          {{message}}
+        </div>
+      {% endfor %}
+    {% endif %}
+  {% endwith %}
 		</div>
 		</div>
 	</body>
