--- a/templates/index.html
+++ b/templates/index.html
@@ -193,7 +193,7 @@
 
 <br>
 
-<center><img src="/static/chlogo.png" style="width:350px;height:175px;"></center>
+<center><img src="/static/chlogo2.png" style="width:350px;height:175px;"></center>
 
 <br>
 
