--- a/templates/login.html
+++ b/templates/login.html
@@ -122,7 +122,7 @@
 </style>
 </head>
 <body>
-	<img src="/static/chlogo.png" style="height:120px;width:320px;">
+	<img src="/static/chlogo2.png" style="height:140px;width:320px;">
 	<br>
 	<br>
 	<br>
